--- a/Module 2 Solution/css/styles.css
+++ b/Module 2 Solution/css/styles.css
@@ -1,81 +1,69 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 /* Simple Responsive Framework */
 .row{
-	width: 100%;
+  width: 100%;
 }
 /*Desktop*/
 @media (min-width: 992px){
 .col-desktop-3{
-		width: 33%;
-	}
+    width: 33%;
+  }
 }
 /*Tablet*/
 @media (min-width: 768px) and (max-width: 991px){
 .col-tablet-2{
-		width: 50%;	
-	}
+    width: 50%; 
+  }
 }
 /*Mobile*/
-@media (max-width: 767px){
+@media (min-width: 0px) and (max-width: 767px){
 .col-mobile-1{
-		width: 100%;	
-	}
+    width: 100%;  
+  }
 }
 body{
-	margin: 0;
-	padding: 0;
-	background-color: white;
- 	font-family: Helvetica, sans-serif;
- 	font-size: 15px;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: Comic Sans MS, sans-serif;
+  font-size: 15px;
 }
 div.col-desktop-3,.col-tablet-2,.col-mobile-1{
-	float: left;
-	border: 1px solid black;
-	background-color: grey;
-	margin-right: 5px;
-	padding: 10px 10px 10px 10px;
-	position: relative;
+  float: left;
+  border: 3px solid black;
+  background-color: grey;
+  margin-right: 5px;
 }
 #title{
-	text-align: center;
-	font-size:1.75em;
+  text-align: center;
+  font-size:1.75em;
 }
-#Chicken{
-	font-size: 1.25em;
-	color: black;
-	border: 1px solid black;
-	background-color: pink;
-	padding: 0px 10px 0px 10px;
-	position: absolute;
-	top: 0px;
-	left: 413px;
-	margin-top: 0px;
-	margin-bottom: 0px;
-
+.Content{
+  padding: 10px 10px 10px 10px;
 }
-#Beef{
-	font-size: 1.25em;
-	color: white;
-	border: 1px solid black;
-	background-color: red;
-	padding: 0px 10px 0px 10px;
-	position: absolute;
-	top: 0px;
-	left: 444px;
-	margin-top: 0px;
-	margin-bottom: 0px;
+.Content-Name{
+    font-size: 1.25em;
+    text-align: center;
+    border: 3px solid black;
+    padding: 0px 10px 0px 10px;
+    height: 40px;
+    width: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right:0px;
+    float: right;
 }
-#Sushi{
-	font-size: 1.25em;
-	color: black;
-	border: 1px solid black;
-	background-color: gold;
-	padding: 0px 10px 0px 10px;
-	position: absolute;
-	top: 0px;
-	left: 432px;
-	margin-top: 0px;
-	margin-bottom: 0px;
+.Chicken{
+  color: black;
+  background-color: pink;
+}
+.Beef{
+  color: white;
+  background-color: red;
+}
+.Sushi{
+  color: black;
+  background-color: gold;
 }
